@@ -96,7 +96,7 @@
                                            class="noborder"
                                            name="paths:list" id="#"
                                            value="#"
-                                           tal:attributes="value   python:view.item_path(item);
+                                           tal:attributes="value   item/getPath;
                                                            id      string:cb_${item/id};
                                                            checked item/checked|nothing;
                                                            alt     string:Select ${item/Title};
